--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -9,3 +9,14 @@ body {
 .dark body {
   background-color: #121212;
 }
+/* For Chrome, Safari, and Edge */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none; /* Remove spin buttons */
+  margin: 0; /* Remove extra margin */
+}
+
+/* For Firefox */
+input[type="number"] {
+  -moz-appearance: textfield; /* Treat as text field */
+}
