--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -20,3 +20,10 @@ input[type="number"]::-webkit-outer-spin-button {
 input[type="number"] {
   -moz-appearance: textfield; /* Treat as text field */
 }
+
+/* Swiper navigation arrows */
+.swiper-button-next,
+.swiper-button-prev {
+  color: #414141 !important;
+  font-size: 10px !important;
+}
