--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -4,12 +4,15 @@
 
 body {
   background-color: #f5f5f5;
+  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
 }
 
 .dark body {
   background-color: #121212;
 }
-/* For Chrome, Safari, and Edge */
+For Chrome, Safari, and Edge
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none; /* Remove spin buttons */
